[project]
name = "vlessich"
version = "0.1.0"
description = "Vlessich-1 — production-grade Telegram VPN bot (Marzban + Xray Reality + multi-stack)"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.1.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "apscheduler>=3.10.4",
    "qrcode[pil]>=7.4.2",
    "psutil>=6.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
